장고 개인 프로젝트
" 구글링은 유사한 키워드의 어떤 웹 문서를 찾는 수단일 뿐, 문제 해결의 방법은 아닙니다. 게다가 구글링 시에 현 상황의 모든 맥락을 담을 수도 없잖아요. 그러니 찾는 해결책을 구글링을 통해 찾는 것은 대개 어렵습니다.

질문에, 검색어에 현재 문제의 핵심을 담을려면 코드를 차근차근 살펴보며 코드를 이해할려는 노력이 필요할 것이구요.

저도 혹은 고수라 불리는 사람들도 학선님께서 겪으시는 시행착오의 과정을 지금도 겪습니다. 개발자의 숙명이고, 이러한 과정들을 즐기는 사람들이 개발자로서 남게 되는 듯 합니다.

너무 조급해하지 마시구요. 조급함은 성장에 아무런 도움이 되지 못합니다.

같이 차근차근 성장해보시죠. 화이팅입니다. :-)"

--- a/community/templates/post_detail.html
+++ b/community/templates/post_detail.html
@@ -59,7 +59,7 @@
                         노래 리스트</strong>
                 </a>
                 <a href="{% url 'community:post_list' %}" class="navbar-brand d-flex align-items-center ms-3">
-                    <strong>게시판</strong>
+                    <strong>커뮤니티</strong>
                 </a>
             </div>
             <div class="d-flex align-items-center">
