--- a/music/templates/_song.html
+++ b/music/templates/_song.html
@@ -24,9 +24,8 @@
                 {% endif %}
             </div>
             <small class="text-body-secondary">
-                좋아요 ♥ : {{ song.like_count }}
+                좋아요 ♥ : {{ song.like_count.count }}
             </small>
         </div>
     </div>
 </div>
-
