--- a/community/templates/base_generic.html
+++ b/community/templates/base_generic.html
@@ -58,7 +58,7 @@
                         노래 리스트</strong>
                 </a>
                 <a href="{% url 'community:post_list' %}" class="navbar-brand d-flex align-items-center ms-3">
-                    <strong>게시판</strong>
+                    <strong>커뮤니티</strong>
                 </a>
             </div>
             <div class="d-flex align-items-center">
@@ -86,7 +86,7 @@
 </header>
 <body>
 <div class="container mt-4">
-    <h1>게시물 목록</h1>
+    <h1>커뮤니티</h1>
     {% if posts %}
         <table class="table table-striped">
         <thead>
