--- a/community/templates/post_form.html
+++ b/community/templates/post_form.html
@@ -59,7 +59,7 @@
                         노래 리스트</strong>
                 </a>
                 <a href="{% url 'community:post_list' %}" class="navbar-brand d-flex align-items-center ms-3">
-                    <strong>게시판</strong>
+                    <strong>커뮤니티</strong>
                 </a>
             </div>
             <div class="d-flex align-items-center">
@@ -118,9 +118,7 @@
 
                 {% if field.name == 'content' %}
                     <!-- 내용 입력을 위한 textarea -->
-                    <textarea id="{{ field.id_for_label }}" class="form-control" name="{{ field.name }}" rows="5" required>
-                        {% if field.value %}{{ field.value }}{% endif %}
-                    </textarea>
+                    <textarea id="{{ field.id_for_label }}" class="form-control" name="{{ field.name }}" rows="5" required>{% if field.value %}{% endif %}</textarea>
                 {% else %}
                     <!-- 제목 입력을 위한 input -->
                     <input type="{{ field.field.widget.input_type }}" id="{{ field.id_for_label }}" class="form-control" name="{{ field.name }}" value="{% if field.value %}{{ field.value }}{% endif %}" required>
