--- a/community/templates/post_list.html
+++ b/community/templates/post_list.html
@@ -1,7 +1,7 @@
 {% extends "base_generic.html" %}
 
 {% block content %}
-  <h1>게시물 목록</h1>
+  <h1>커뮤니티</h1>
   <ul>
     {% for post in posts %}
       <li>
