--- a/music/templates/base.html
+++ b/music/templates/base.html
@@ -1,55 +1,92 @@
 {% load component_tags static %}
 
-<!doctype html>
-<html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>인기차트</title>
-    <link rel="stylesheet" href="{% static 'bootstrap/5.3.3/css/bootstrap.min.css' %}"/>
-    {% component_css_dependencies %}
-</head>
-<body hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'>
+{% load django_bootstrap5 %}
 
-<header class="p-3 text-bg-dark">
-    <div class="container">
-        <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-            <a href="{% url 'music:root' %}"
-               class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
-                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor"
-                     stroke-linecap="round" stroke-linejoin="round" stroke-width="2" aria-hidden="true" class="me-2"
-                     viewBox="0 0 24 24">
-                    <path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z"></path>
-                    <circle cx="12" cy="13" r="4"></circle>
-                </svg>
-                <strong>Home</strong>
-            </a>
-            <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-                <li><a href="{% url 'music:index' %}" class="nav-link px-2 text-white">인기차트</a></li>
-                <li><a href="{% url 'playlist:create_playlist' %}" class="nav-link px-2 text-white">플레이 리스트</a></li>
-                <li><a href="#" class="nav-link px-2 text-white">게시판</a></li>
-            </ul>
-            <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
-                <input type="search"
-                       class="form-control form-control-dark text-bg-dark"
-                       placeholder="Search..."
-                       aria-label="Search">
-            </form>
-            <div class="text-end">
-                {% if not user.is_authenticated %}
-                    {% url 'accounts:login' as login_url %}
-                    <a href="{{ login_url }}{% if login_url != request.path %}?next={{ request.path }}{% endif %}"
-                       class="btn btn-outline-light me-2">로그인</a>
-                    <a href="{% url 'accounts:signup' %}?next={{ request.path }}"
-                       class="btn btn-outline-light me-2">회원가입</a>
-                {% else %}
-                    <a hx-post="{% url 'accounts:logout' %}?next={{ request.path }}"
-                       hx-target="body"
-                       hx-push-url="true"
-                       class="btn btn-warning">로그아웃</a>
-                {% endif %}
+<!doctype html>
+<html lang="ko" data-bs-theme="dark">
+<head>
+    <meta charset="UTF-8"/>
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"/>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
+    <title>HotTrack</title>
+
+    {# https://cdnjs.com/libraries/bootstrap #}
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.1/css/bootstrap.min.css"/>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.1/js/bootstrap.bundle.min.js"></script>
+
+</head>
+<body>
+
+{# ref: https://getbootstrap.com/docs/5.3/examples/album/ #}
+
+<header data-bs-theme="dark">
+    <div class="collapse text-bg-dark" id="navbarHeader">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-8 col-md-7 py-4">
+                    <h4>About</h4>
+                    <p class="text-body-secondary">Add some information about the album below, the author, or any other
+                        background context. Make it a few sentences long so folks can pick up some informative tidbits.
+                        Then, link them off to some social networking sites or contact information.</p>
+                </div>
+                <div class="col-sm-4 offset-md-1 py-4">
+                    <h4>Contact</h4>
+                    <ul class="list-unstyled">
+                        <li><a href="https://x.com/?lang=ko&mx=2" class="text-white">Follow on Twitter</a></li>
+                        <li>
+                            <a href="https://www.facebook.com/login/?next=https%3A%2F%2Fwww.facebook.com%2F%3Flocale%3Dko_KR"
+                               class="text-white">Like on Facebook</a></li>
+                        <li>
+                            <a href="https://www.instagram.com/sem/campaign/emailsignup/?campaign_id=13530338586&extra_1=s%7Cc%7C547419126422%7Ce%7Cinstagram%20%27%7C&placement=&creative=547419126422&keyword=instagram%20%27&partner_id=googlesem&extra_2=campaignid%3D13530338586%26adgroupid%3D126262418054%26matchtype%3De%26network%3Dg%26source%3Dnotmobile%26search_or_content%3Ds%26device%3Dc%26devicemodel%3D%26adposition%3D%26target%3D%26targetid%3Dkwd-1321618851291%26loc_physical_ms%3D9195932%26loc_interest_ms%3D%26feeditemid%3D%26param1%3D%26param2%3D&gad_source=1&gclid=Cj0KCQjwj4K5BhDYARIsAD1Ly2qwAfwlHoF6OA_pcX_O0bbHepMEmw4eL8TMa5vlLRS-n0BhfVfY1t4aAlmvEALw_wcB"
+                               class="text-white">instagram</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="navbar navbar-dark bg-dark shadow-sm">
+        <div class="container">
+            <div class="d-flex align-items-center">
+                <a href="{% url 'music:root' %}" class="navbar-brand d-flex align-items-center">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor"
+                         stroke-linecap="round" stroke-linejoin="round" stroke-width="2" aria-hidden="true" class="me-2"
+                         viewBox="0 0 24 24">
+                        <path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z"></path>
+                        <circle cx="12" cy="13" r="4"></circle>
+                    </svg>
+                    <strong>Home</strong>
+                </a>
+                <a href="{% url 'music:index' %}" class="navbar-brand d-flex align-items-center ms-3">
+                    <strong>인기차트</strong>
+                </a>
+                <a href="{% url 'playlist:create_playlist' %}" class="navbar-brand d-flex align-items-center ms-3">
+                    <strong>
+                        노래 리스트</strong>
+                </a>
+                <a href="{% url 'community:post_list' %}" class="navbar-brand d-flex align-items-center ms-3">
+                    <strong>커뮤니티</strong>
+                </a>
+            </div>
+            <div class="d-flex align-items-center">
+                <div class="text-end">
+                    {% if not user.is_authenticated %}
+                        {% url 'accounts:login' as login_url %}
+                        <a href="{{ login_url }}{% if login_url != request.path %}?next={{ request.path }}{% endif %}"
+                           class="btn btn-outline-light me-3">로그인</a>
+                        <a href="{% url 'accounts:signup' %}?next={{ request.path }}"
+                           class="btn btn-outline-light me-3">회원가입</a>
+                    {% else %}
+                        <a href="{% url 'accounts:logout' %}?next={{ request.path }}"
+                           hx-target="body"
+                           hx-push-url="true"
+                           class="btn btn-outline-light me-3">로그아웃</a>
+                    {% endif %}
+                </div>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarHeader"
+                        aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
             </div>
         </div>
     </div>
